afl-cov-0.4 (01/09/2016):
    - Add support for parallelized execution runs of AFL. This is done by
      tracking all fuzzing directory instances created with afl-fuzz '-M' or
      '-S'. These directories are created in the main sync directory
      ('afl-fuzz -o sync_dir'). The coverage results are calculated globally
      across all fuzzing instances.
    - Default to not include branch coverage data within code coverag results
      This is because AFL commonly build up many hundreds of test cases, and
      generating branch coverage across all of these cases may slow afl-cov
      down significantly. However, if branch coverage is desired or required,
      just add the new --enable-branch-coverage argument.
    - Added a test suite in the test/ directory that leverages the python
      unittest module. Proper operation of the test suite requires afl-fuzz
      to be installed, and tests are performed against a paricular commit
      (e3ae6747) from the fwknop project for which AFL test cases were
      pre-built.
    - Bug fix reported by @kcwu about some files not showing up in zero
      coverage lcov web reports.

afl-cov-0.3 (06/29/2015):
    - Add --background mode to facilitate clean integration with afl-fuzz
      wrapper scripts. In this mode, afl-cov will wait for afl-fuzz to start,
      produce coverage results while afl-fuzz is running, and then exit
      automatically when finished. Here is an example of a wrapper script from
      the fwknop project that combines afl-cov in --background mode with
      afl-fuzz:

        https://github.com/mrash/fwknop/blob/master/test/afl/fuzzing-wrappers/client-rc.sh

    - Add fuzzing-dir/cov/afl-cov.log file to track verbose run time
      information.
    - Add fuzzing-dir/cov/afl-cov-status file to track the current PID, argv,
      and afl-cov version.

afl-cov-0.2 (05/28/2015):
    - Add the fuzzing-dir/cov/id-delta-cov file which lists all functions and